# pico_epaper_73

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.h  pico_extras_import.cmake
examples/: CMakeLists.txt  EPD_7in3f_test.c  EPD_Test.h  run_File.c  run_File.h
extra_uf2/: ReadMe.txt  rtc_12hours.uf2  rtc_6hours.uf2
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  ffconf.h  hw_config.c
lib/FatFs_SPI/ff14a/source/: ff.c  ffconf.h
lib/FatFs_SPI/sd_driver/: sd_card.c
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/RTC/: CMakeLists.txt  waveshare_PCF85063.c  waveshare_PCF85063.h
lib/e-Paper/: CMakeLists.txt  EPD_7in3f.c  EPD_7in3f.h
lib/led/: CMakeLists.txt  led.c  led.h
